Fixed #2. Changed z-index to 10003.

--- a/fsb_style.css
+++ b/fsb_style.css
@@ -13,7 +13,7 @@
 
 #FSPtwitter {
 	Bottom: 50%;
-	z-index: 10005;
+	z-index: 10003;
 	border:2px solid #395D99;
 	background-color: #fff;
 	width:230px;
